[project]
name = "dlt"
dynamic = ["version"]
description = "Python implementation for DLT"
authors = [
    {name = "BMW CarIT", email="carit.info@bmw.de"},
]
readme = "README.md"
license = {file = "LICENCE.txt"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: System :: Logging",
    "Programming Language :: Python :: 3",
]

dependencies = [
]

[project.optional-dependencies]
dev = [
    "black>=22.10",
    "flake8>=5",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0"
]

[project.urls]
"Homepage" = "https://github.com/bmwcarit/python-dlt"

[project.scripts]
py_dlt_receive = "dlt.py_dlt_receive:main"

[tool.setuptools.packages.find]
include = ["dlt*"]
exclude = ["playbook*", "zuul.d*", "extracted_files*", "tests"]

[build-system]
requires = ["setuptools>=45", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.dev{ccount}+{sha}"

[tool.black]
line-length = 119
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
  | _version.py
)
'''

[tool.ruff]
line-length = 119
select = ["E", "F", "Q", "D"]
# the following is equivalent to --docstring-convention=pep8
extend-ignore = [
    "D100",
    "D107",
    "D105",
    "D401",
    "D101",
    "D102",
    "D103",
    "D104",
    "D200",
    "D400",
    "D203",
    "D205",
    "D212",
    "D213",
    "D214",
    "D215",
    "D404",
    "D405",
    "D406",
    "D407",
    "D408",
    "D409",
    "D410",
    "D411",
    "D413",
    "D415",
    "D416",
    "D417",
]

# D104: Missing docstring in public package
# This D104 error will be ignored only in __init__ files
per-file-ignores = {"__init__.py" = ["D104"]}
