[options]
setup_requires =
  setuptools_scm

[pycodestyle]
max-line-length = 119

[TYPECHECK]
disable=bad-option-value
ignored-classes=socket,struct

[MESSAGES CONTROL]

# Enable the message, report, category or checker with the given id(s). You can
# either give multiple identifier separated by comma (,) or put this option
# multiple time. See also the "--disable" option for examples.
#enable=

# Disable the message, report, category or checker with the given id(s). You
# can either give multiple identifiers separated by comma (,) or put this
# option multiple times (only on the command line, not in the configuration
# file where it should appear only once).You can also use "--disable=all" to
# disable everything first and then reenable specific checks. For example, if
# you want to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use"--disable=all --enable=classes
# --disable=W"

# Disabled messages
# C0325 Unnecessary parens after 'print' keyword
# I0011 Locally disabling %s Used when an inline option disable a message or a messages category
# R0201 Method could be a function
# R0205 Useless object inheritance
# R0902 Too many instance attributes
# R0903 Too few public methods
# R0912 Too many branches (%s/%s) Used when a function or method has too many branches, making it hard to follow.
# R0913 Too many arguments
# R0921 Abstract class not referenced
# R0922 Abstract class is only referenced 1 times
# R0801 Similar code in multiple files
# W0511 Fixme
# W0613 Unused argument
disable=I0011,R0201,R0205,R0902,R0903,R0912,R0913,R0921,R0922,R0801,C0325,W0511,W0613
